# sptxinsight

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  SKILL.md  _render_cci_hplot.py  _screen_cci_hplot.py  build-docker.sh  conda-setup.sh  pyproject.toml
docs/: cme.rst  conf.py  index.rst  installing.rst  make.bat  requirements.txt
sptxinsight/: __init__.py  __main__.py  _version.py  adapt.py  cancel.py  pipeline.py  uri_path.py
sptxinsight/cli/: __init__.py  _common.py  _paths.py  agg.py  annotate.py  cci.py  cli.py  cme.py  export.py  hplot.py  ingest.py  run.py
sptxinsight/insightlib/: __init__.py  agg_generation.py  aggregate.py  cci_generation.py  cme_generation.py  cme_profile.py  graph_cache.py  hplot_generation.py  insight_helpers.py  vorononi_cme_region_helper.py
sptxinsight/io/: __init__.py  _wsi_stub.py  anndata_reader.py
sptxinsight/mcp/: __init__.py  __main__.py  adapters.py  jobs.py  schema.py  server.py
tests/: test_aggregate.py  test_cme_modes.py  test_hplot_distance_contract.py
